# ScriptLang

./: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common/script_lang/: CMakeLists.txt  lexer.h  token.h
common/script_lang/src/: lexer.cpp  token.cpp
sources/: script.slang
